--- a/sass/blocks/_reviews.sass
+++ b/sass/blocks/_reviews.sass
@@ -97,3 +97,5 @@
             font-size: 12px
             line-height: 160%
             overflow-y: auto
+            &::-webkit-scrollbar
+                width: 0
